<resources>
    <string name="CALCULATE" translatable="false">РАССЧИТАТЬ</string>
    <string name="Measure" translatable="false">ИЗМЕРИТЬ</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_body_2_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_button_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_caption_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_2_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_3_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_4_material" translatable="false">sans-serif-light</string>
    <string name="abc_font_family_headline_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_menu_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_subhead_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_title_material" translatable="false">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_beer_alco" translatable="false">Калькулятор содержания объемного алкоголя в пиве (вине)</string>
    <string name="act_beer_brix" translatable="false">Калькулятор конвертации Брикс</string>
    <string name="act_beer_suslo" translatable="false">РАСЧЕТ СОЛОДА НА СУСЛО</string>
    <string name="act_beer_tempcorrect" translatable="false">Калькулятор корректировки показаний плотности ареометра от температуры</string>
    <string name="act_sem_boiling" translatable="false">Зависимость температуры кипения браги от содержания в ней спирта</string>
    <string name="act_sem_headbody" translatable="false">Калькулятор чистого спирта и отбора голов</string>
    <string name="act_sem_massconvert" translatable="false">Конвертирование массы в объем</string>
    <string name="act_sem_massmixing" translatable="false">Разбавление по массе</string>
    <string name="act_sem_napitok" translatable="false">РАСЧЕТ КОЛИЧЕСТВА ВОДЫ ДЛЯ РАЗБАВЛЕНИЯ СПИРТА ДО НУЖНОГО ОБЪЕМА НАПИТКА</string>
    <string name="act_sem_razbavka" translatable="false">Калькулятор разбавления спирта водой</string>
    <string name="act_sem_smeshivanie" translatable="false">Калькулятор смешивания двух спиртосодержащих жидкостей</string>
    <string name="act_sem_speedotbor" translatable="false">Скорость отбора</string>
    <string name="act_sem_sugarbraga" translatable="false">Калькулятор расчета сахарной браги</string>
    <string name="act_sem_teh" translatable="false">Расчет ТЭНа</string>
    <string name="act_sem_tempcorrect" translatable="false">Коррекция показаний спиртового ареометра в зависимости от температуры</string>
    <string name="act_sem_temperature" translatable="false">Калькулятор смешивания жидкостей разных температур</string>
    <string name="act_vine_sugar" translatable="false">Калькулятор расчета добавления сахара в сусло</string>
    <string name="action_LoadData" translatable="false">Загрузить</string>
    <string name="action_SaveData" translatable="false">Сохранить</string>
    <string name="action_auto" translatable="false">Автоматическая тема</string>
    <string name="action_cancel" translatable="false">Отмена</string>
    <string name="action_dark" translatable="false">Темная тема</string>
    <string name="action_delete" translatable="false">Удалить</string>
    <string name="action_edit" translatable="false">Редактировать</string>
    <string name="action_export" translatable="false">Экспорт</string>
    <string name="action_import" translatable="false">Импорт</string>
    <string name="action_light" translatable="false">Светлая тема</string>
    <string name="action_settings" translatable="false">Настройки</string>
    <string name="action_themeswith" translatable="false">Темная тема</string>
    <string name="addmynotes" translatable="false">Добавить заметку</string>
    <string name="app_name" translatable="false">Алко Калькулятор</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="beer_alco_rez" translatable="false">Расчетная спиртуозность:</string>
    <string name="beer_hop_a" translatable="false">Альфа(%)</string>
    <string name="beer_hop_t" translatable="false">Время(мин)</string>
    <string name="beer_hop_w" translatable="false">Вес(г)</string>
    <string name="beer_ibu" translatable="false">Расчетная горечь по IBU</string>
    <string name="beer_ibu_unreal" translatable="false">При такой плотности расчет невозможен</string>
    <string name="beer_tempcorr_rez" translatable="false">Расчетные показания ареометра:</string>
    <string name="boiling_temp" translatable="false">Температура в кубе</string>
    <string name="bottle_mass" translatable="false">Масса тары (гр):</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brix" translatable="false">Брикс:</string>
    <string name="calc_boiling" translatable="false">Расчет крепости по температуре кипения</string>
    <string name="calc_brix_plato" translatable="false">Расчет Брикс/Плато</string>
    <string name="calc_correct_density" translatable="false">Коррекция ареометра (плотность)</string>
    <string name="calc_correct_spirt" translatable="false">Коррекция ареометра (спирт)</string>
    <string name="calc_density" translatable="false">Расчет крепости по плотности</string>
    <string name="calc_drink" translatable="false">Расчет на напиток</string>
    <string name="calc_fract" translatable="false">Дробная перегонка</string>
    <string name="calc_heatingelement" translatable="false">Расчет ТЭНа</string>
    <string name="calc_ibu" translatable="false">Расчет горечи по IBU</string>
    <string name="calc_massconvert" translatable="false">перевод массы в объем</string>
    <string name="calc_massmixing" translatable="false">Разбавление по массе</string>
    <string name="calc_mix" translatable="false">Смешивание спиртов</string>
    <string name="calc_speedotbor" translatable="false">Скорость отбора</string>
    <string name="calc_sugar_braga" translatable="false">Расчет сахарной браги</string>
    <string name="calc_suslo" translatable="false">расчет солода на сусло</string>
    <string name="calc_temperature_mix" translatable="false">Смешивание разных температур</string>
    <string name="calc_vinesugar" translatable="false">Сахар на винное сусло</string>
    <string name="calc_waterdil" translatable="false">Разбавление водой</string>
    <string name="calcs" translatable="false">Калькуляторы</string>
    <string name="calculate_cost" translatable="false">Расчетная стоимость нагрева:</string>
    <string name="calculate_power" translatable="false">Расчетная потребляемая мощность (Вт):</string>
    <string name="calculate_time" translatable="false">Расчетное время на нагрев (мин):</string>
    <string name="calibr_temp_hydro" translatable="false">Калибровочная температура (10-24):</string>
    <string name="character_counter_content_description" translatable="false">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="click_long_please" translatable="false">Жми дольше! :)</string>
    <string name="conv_to_1xxx" translatable="false">Конвертировать в уд.плотность (1.ххх)</string>
    <string name="fin_density" translatable="false">Конечная плотность:</string>
    <string name="guid_ferments" translatable="false">Ферменты и их функции</string>
    <string name="guid_fertmantable" translatable="false">Таблица Фертмана</string>
    <string name="guid_hopes" translatable="false">Таблица сортов хмеля</string>
    <string name="guid_sugarfruit" translatable="false">Таблица сахара и кислот в фруктах</string>
    <string name="guid_waterfruits" translatable="false">Содержание воды в фруктах</string>
    <string name="guid_yeast" translatable="false">Таблица сухих пивных дрожжей</string>
    <string name="guides" translatable="false">Справочники</string>
    <string name="init_density" translatable="false">Начальная плотность:</string>
    <string name="koefSusla" translatable="false">Поправочный коэффициент сусла:</string>
    <string name="lang_auto" translatable="false">Системный</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="measureRefract" translatable="false">Измерение с помощью рефрактометра</string>
    <string name="need_strong" translatable="false">Необходимая крепость (%):</string>
    <string name="need_sugar" translatable="false">Необходимое количество сахара (кг)</string>
    <string name="spirt_1" translatable="false">Спирт-сырец (л):</string>
    <string name="spirt_heads_vol" translatable="false">Доля голов (%):</string>
    <string name="spirt_result_fullspirt" translatable="false">Общий объем спирта:</string>
    <string name="spirt_result_heads" translatable="false">Голов (л):</string>
    <string name="spirt_result_hvost" translatable="false">Хвостов (л):</string>
    <string name="spirt_result_prod" translatable="false">Тело (л):</string>
    <string name="spirt_strong_1" translatable="false">Крепость сырца (%):</string>
    <string name="spirt_strong_out" translatable="false">Крепость на выходе (%):</string>
    <string name="spirt_tails_vol" translatable="false">Доля хвостов (%):</string>
    <string name="start_sugar" translatable="false">Начальная сахаристость сусла (%)</string>
    <string name="vine_finish_sugar" translatable="false">Конечная сахаристость сусла (%)</string>
    <string name="vintosug" translatable="false">Крепость в сахаристость</string>
    <string name="vol_spirt_l" translatable="false">Объем продукта (л):</string>
</resources>