<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/group_theme" android:checkableBehavior="single">
        <item android:id="@id/action_light" android:orderInCategory="100" android:title="@string/action_light" app:showAsAction="never" />
        <item android:id="@id/action_dark" android:orderInCategory="100" android:title="@string/action_dark" app:showAsAction="never" />
        <item android:id="@id/action_auto" android:orderInCategory="100" android:title="@string/action_auto" app:showAsAction="never" />
    </group>
    <group android:id="@id/group_lang" android:checkableBehavior="single">
        <item android:id="@id/action_langRU" android:orderInCategory="100" android:title="@string/lang_ru" app:showAsAction="never" />
        <item android:id="@id/action_langEN" android:orderInCategory="100" android:title="@string/lang_en" app:showAsAction="never" />
        <item android:id="@id/action_langAUTO" android:orderInCategory="100" android:title="@string/lang_auto" app:showAsAction="never" />
    </group>
</menu>