<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/act_sem_headbody" android:textAllCaps="true" />
            <TextView android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_1" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <EditText android:id="@id/spirt_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_strong_1" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/spirt_strong" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_strong_out" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/spirt_strongOut" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_heads_vol" />
            <Spinner android:entries="@array/heads_percents" android:id="@id/heads_perc" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_tails_vol" />
            <Spinner android:entries="@array/tails_percents" android:id="@id/tails_perc" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" />
            <Button android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/CALCULATE" style="@style/MoonshineTheme.CalculateBtn" />
            <TextView android:gravity="center" android:id="@id/spirt_itog_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_result_fullspirt" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/spirt_itog_full_rez" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
            <TextView android:gravity="center" android:id="@id/spirt_itog_heads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_result_heads" />
            <TextView android:textSize="40.0sp" android:textStyle="bold" android:textColor="#ffff0000" android:gravity="center" android:id="@id/spirt_itog_heads_rez" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
            <TextView android:gravity="center" android:id="@id/spirt_prod_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_result_prod" />
            <TextView android:textSize="40.0sp" android:textStyle="bold" android:textColor="#ff00ff00" android:gravity="center" android:id="@id/spirt_itog_prod_rez" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
            <TextView android:gravity="center" android:id="@id/spirt_hvost_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spirt_result_hvost" />
            <TextView android:textSize="40.0sp" android:textStyle="bold" android:textColor="#ffff0000" android:gravity="center" android:id="@id/spirt_itog_hvost_rez" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>