<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/act_vine_sugar" android:textAllCaps="true" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vol_spirt_l" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/vinesus_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_sugar" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/vinesugar_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/need_strong" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/vinestrong_finish" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberDecimal" />
                <ImageButton android:id="@id/clear3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/MoonshineTheme.ClearButtons" />
            </LinearLayout>
            <Switch android:id="@id/strongtosugar" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:text="@string/vintosug" android:track="@drawable/switch_track" />
            <Button android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/CALCULATE" style="@style/MoonshineTheme.CalculateBtn" />
            <TextView android:gravity="center" android:id="@id/sem_rez" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/need_sugar" />
            <TextView android:textSize="40.0sp" android:textStyle="bold" android:textColor="#ff0000ff" android:gravity="center" android:id="@id/vinesugar_need" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
            <TextView android:gravity="center" android:id="@id/sem_rez_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vine_finish_sugar" />
            <TextView android:textSize="40.0sp" android:textStyle="bold" android:textColor="#ff00ff00" android:gravity="center" android:id="@id/vinesugar_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="000" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>